# pytest_course

./: .gitignore  pyproject.toml
src/: calculator.py  file_checker.py  user_processor.py  utils.py
tests/: test_calculator.py  test_file.py  test_file_checker.py  test_user_processor.py  test_utils.py
