[project]
name = "pytest-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "pytest-xdist>=3.8.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
pythonpath = "."
addopts = """
    -v
    -ra
    --strict-markers
    --cov=src
    --cov-report=term-missing
    --cov-report=html
"""
testpaths = ["tests"]
markers = [
    "smoke: Дымовые тесты для критического функционала",
    "regression: Полный набор регрессионных тестов",
    "slow: Медленные тесты (например, с доступом к сети)"
]
